# camera-dect

./: BUILD_MSI.md  cahierdecharge.md
rustguard-vision/: Cargo.toml  build.rs
rustguard-vision/migrations/: 0001_initial_setup.sql
rustguard-vision/qml/: main.qml
rustguard-vision/src/: cxxqt_object.rs  db.rs  lib.rs  main.rs  video_pipeline.rs
rustguard-vision/tests/: pipeline_test.rs
rustguard-vision/wix/: License.rtf  main.wxs
version_python/: README.md  rustguard.spec  setup.iss
version_python/qml/: AdminTab.qml  AnalysisTab.qml  main.qml
version_python/src/: database.py  main.py  video_pipeline.py
video-analytics/: .gitignore  Cargo.toml  README.md
video-analytics/src/: api.rs  detection.rs  detection_tests.rs  ingestion.rs  main.rs  pipeline.rs  storage.rs
