[package]
name = "rustguard-vision"
version = "0.1.0"
edition = "2021"
authors = ["RustGuard Team <contact@rustguard.com>"]
description = "A hybrid Rust/Qt6 application for video surveillance and analytics."
license = "MIT"

[package.metadata.wix]
upgrade-guid = "846400AC-A715-444E-B750-3559992DB253"
path-guid = "1566D8A6-6042-4030-88AF-9181ECEAD862"
license = false
eula = false

[dependencies]
cxx = { version = "1.0", optional = true }
cxx-qt = { version = "0.6", optional = true }
cxx-qt-lib = { version = "0.6", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# opencv = "0.88"
# ort = "1.16"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

[build-dependencies]
cxx-qt-build = { version = "0.6", optional = true }

[features]
default = ["frontend"]
frontend = ["cxx", "cxx-qt", "cxx-qt-lib", "cxx-qt-build"]
