[package]
name = "video-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
ort = { version = "2.0.0-rc.9" }
ndarray = "0.15"
uuid = { version = "1.8", features = ["v4"] }
dashmap = "5.5" # For concurrent map storage
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.6"
tower-http = { version = "0.5", features = ["cors", "fs"] }
futures = "0.3"
async-trait = "0.1"
